Prevent podcast tooltip icon from getting squashed

--- a/assets/app/components/show_list.scss
+++ b/assets/app/components/show_list.scss
@@ -78,6 +78,7 @@
           &-subscribe {
             background: $green;
             border-radius: 50%;
+            flex: 0 0 20px;
             height: 20px;
             margin: -1px 0 0 8px;
             position: relative;
